syntax = "proto3";

package authentication;

option go_package = "main/authentication";

enum Theme{
  VARIATION_1 = 0;
  VARIATION_2 = 1;
  VARIATION_3 = 2;
  VARIATION_4 = 3;

}

enum DeviceType{
  Phone = 0;
  Tablet = 1;
  PC = 2;
  Laptop = 3;
}

service Authentication{
  rpc Login(LoginRequest) returns (LoginResponse);
}
message LoginRequest{
  string Key = 1;
  optional string DeviceName = 2;
  optional string OS = 3;
  optional DeviceType DeviceType = 4;
}

message LoginResponse{
  string SessionID = 1;
  Theme Theme = 2;
  bool IsFirstLogin = 3;
}
